syntax = "proto3";

package api.users;

option go_package = "api/internal/proto/users;usersservice";

message Notifications {
  int32 id = 1;
  int32 facility_id = 2;
  string building = 3;
  repeated User users = 4;
}

message Users {
  string id = 1;
  string name = 2;
  optional string image = 3;
  string email = 4;
  string email_verified = 5; // RFC3339 string
  optional string password = 6;
  optional string provider = 7;
  bool external_user = 8;
  UserRole role = 9;
  string created_at = 10; // RFC3339 string
  bool tos = 11;
}
enum UserRole {
  USER_ROLE_UNSPECIFIED = 0;
  USER = 1;
  ADMIN = 2;
  STAFF = 3;
  GUEST = 4;
}

message VerificationToken {
  string identifier = 1;
  string token = 2;
  string expires = 3;  // RFC3339 string
}

service UsersService {
  rpc GetUserByEmail (UserByEmailRequest) returns (User);
  rpc GetUser (GetUserRequest) returns (User);
  rpc GetUsers (GetUsersRequest) returns (repeated User);
  rpc CreateUser (CreateUserRequest) returns (User);
  rpc UpdateUser (UpdateUserRequest) returns (User);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
  rpc GetNotifications (GetNotificationsRequest) returns (repeated Notifications);
  rpc GetUserNotifications (GetUserNotificationsRequest) returns (repeated Notifications);
  rpc CreateNotification (CreateNotificationRequest) returns (Notifications);
  rpc EditNotification (EditNotificationRequest) returns (Notifications);
  rpc DeleteNotification (DeleteNotificationRequest) returns (DeleteNotificationResponse);
}

message UserByEmailRequest {
  string email = 1;
}

message GetUserRequest {
  string id = 1;
}
message GetUsersRequest {}

message CreateUserRequest {
 User user = 1;
}

message UpdateUserRequest {
  User user = 1;
}

message DeleteUserRequest {
  string id = 1;
}
message DeleteUserResponse {}
message GetNotificationsRequest {}
message GetUserNotificationsRequest {
  string user_id = 1;
}
message CreateNotificationRequest {
  Notifications notification = 1;
}
message EditNotificationRequest {
  Notifications notification = 1;
}
message DeleteNotificationRequest {
  int64 id = 1;
}
message DeleteNotificationResponse {}
